--- a/.dockerignore
+++ b/.dockerignore
@@ -1,46 +1,82 @@
-# flyctl launch added from .gitignore
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# Dependencies
 node_modules
-**/game/node_modules
-.pnp
-**/.pnp.js
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# testing
+# Production build
+dist
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE and editor files
+.vscode
+.idea
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Git
+.git
+.gitignore
+
+# Documentation
+README.md
+docs/
+*.md
+
+# CI/CD
+.github
+.gitlab-ci.yml
+
+# Convex local development
+.convex
+
+# Testing
 coverage
+*.test.ts
+*.test.tsx
+*.spec.ts
+*.spec.tsx
+jest.config.*
 
-# next.js
-.next
-out
-
-# production
-build
-
-# misc
-**/.DS_Store
-**/*.pem
-
-# debug
-**/npm-debug.log*
-**/yarn-debug.log*
-**/yarn-error.log*
-
-# local env files
-**/.env*.local
-
-# vercel
-**/.vercel
-
-# typescript
-**/*.tsbuildinfo
-**/next-env.d.ts
-**/.env
-.env.prod
+# Fly.io
 fly.toml
+fly/
 
-# Vite build
-**/dist
+# Scripts
+scripts/
 
-**/convex-local*
-**/convex_local*
+# Logs
+logs
+*.log
+
+# Temporary files
+*.tmp
+*.temp
+
+# Plan and project files
+plan.md
+TODO.md
+
+# Editor directories and files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
